# server

./: .gitignore  CHANGELOG.md  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: models.py
app/schemas/: auth.py  user.py
