[project]
name = "nassaq-server"
version = "0.1.0"
description = "NassaQ Python infrastructure/backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]
