[project]
name = "nassaq-server"
version = "0.1.0"
description = "NassaQ Python infrastructure/backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioodbc>=0.5.0",
    "fastapi>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyodbc>=5.3.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlacodegen>=3.2.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]
